Insurance Setup grid Dropdown alignment issue

--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -756,6 +756,11 @@ label {
   -moz-osx-font-smoothing: $moz-osx-font-smoothing;
   -webkit-font-smoothing: $webkit-font-smoothing;
 }
+.noLabel {
+  label {
+    display: none;
+  }
+}
 
 input[type="text"],
 input[type="number"],
